Иправили css ссылок

--- a/css/contacts.less
+++ b/css/contacts.less
@@ -26,6 +26,7 @@
                 }
                 a {
                     text-decoration: underline;
+                    color: #540316;
                 }
         }
         ._map {
