--- a/css/model.less
+++ b/css/model.less
@@ -24,6 +24,10 @@
 				margin-bottom: 15px;
 			}
 		}
+        a {
+        text-decoration: none;
+            color: #540316;
+        }
 	}
 }
 ._about {
