--- a/css/catalog.less
+++ b/css/catalog.less
@@ -4,6 +4,7 @@
 
 	font-size: 17px;
 	color: #540316;
+    text-align: center;
 	.elem {
 		width: 200px;
 
@@ -17,5 +18,9 @@
 
 			border: 5px solid #540316;
 		}
+        a {
+         color: #540316;
+         text-decoration: none;
+        }
 	}
 }
