--- a/css/style.less
+++ b/css/style.less
@@ -94,6 +94,8 @@ table {
 	display: inline-block;
 	margin-right: 160px;
 	img {
+		margin-top: 70px;
+		margin-bottom: 70px;
 		vertical-align: middle;	
 	}
 }
@@ -102,10 +104,6 @@ table {
 	img {
 		vertical-align: middle;
 	}
-}
-
-.div_content {
-
 }
 
 .div_footer {
@@ -207,4 +205,16 @@ table {
                     }
             }
     }
+}
+//
+
+.success {
+    position: absolute;
+    padding: 10px;
+
+    background: #c0a062;	
+    border: 1px solid #540316;
+    color: #540316;
+    line-height: 100%;
+    width: 165px;
 }
