fixed main page

--- a/css/style.less
+++ b/css/style.less
@@ -92,11 +92,12 @@ table {
 
 ._foot {
 	display: inline-block;
+	vertical-align: middle;
 	margin-right: 160px;
 	img {
 		margin-top: 70px;
 		margin-bottom: 70px;
-		vertical-align: middle;	
+		vertical-align: top;	
 	}
 }
 ._inputLogo {
