--- a/css/question.less
+++ b/css/question.less
@@ -1,7 +1,7 @@
 h1 {
 	margin: 20px 0px;
 
-	font-size: 16px;
+	font-size: 33px;
 	font-style: italic;
 	color: #540316;
 }
@@ -18,4 +18,23 @@ h1 {
 			margin-bottom: 10px;
 		}
 	}
+}
+
+.alert {
+    padding: 15px;
+    margin-bottom: 20px;
+    border: 1px solid transparent;
+    border-radius: 4px;
+}
+
+.alert-danger {
+    color: #a94442;
+    background-color: #f2dede;
+    border-color: #ebccd1;
+}
+
+.alert-success {
+    color: #3c763d;
+    background-color: #dff0d8;
+    border-color: #d6e9c6;
 }
