--- a/css/style.less
+++ b/css/style.less
@@ -227,6 +227,11 @@ table {
   width: 100%;
   padding: 0;
   margin: 0;
+  box-shadow:
+   0 1px 4px rgba(0, 0, 0, .3),
+   -23px 0 20px -23px rgba(0, 0, 0, .8),
+   23px 0 20px -23px rgba(0, 0, 0, .8),
+   0 0 40px rgba(0, 0, 0, .1) inset;
   }
 
 .rslides li {
