Поправил контен по центру. Исправил баг с Animate_css

--- a/css/style.less
+++ b/css/style.less
@@ -164,6 +164,8 @@ table {
 
     background: rgba(0,0,0,0.3);
 
+    z-index: 1;
+
     ._modalWindow {
             padding: 10px 30px;
             position: absolute;
@@ -175,7 +177,7 @@ table {
             color: #540316;
             text-align: center;    
             font-style: italic;
-
+            z-index: 2;
             ._close {
                     position: absolute;
                     top: 0;
@@ -212,6 +214,8 @@ table {
 .success {
     position: absolute;
     padding: 10px;
+
+    margin-left: 0;
 
     background: #c0a062;	
     border: 1px solid #540316;
