--- a/css/contacts.less
+++ b/css/contacts.less
@@ -1,6 +1,9 @@
 .div_content {
         color: #540316;
         font-style: italic;
+
+        text-align: center;
+        padding-bottom: 25px;
  
         ._phone {
                 margin-top: 25px;
@@ -10,7 +13,7 @@
                 }
                 div {
                         font-size: 18px;
-                        margin-left: 125px;
+                        /*margin-left: 125px;*/
                 }
         }
  
@@ -20,8 +23,8 @@
                         font-size: 25px;
                 }
                 div {
-                        width: 540px;
-                        margin-left: 125px;
+                        /*width: 540px;*/
+                        /*margin-left: 125px;*/
                         font-size: 18px;
                 }
                 a {
@@ -83,6 +86,7 @@
 }
 .list-cont {
     text-align: center;
+    display: inline-block;
 }
 h2 {
     font-size: 25px;
