--- a/css/contacts.less
+++ b/css/contacts.less
@@ -1,9 +1,8 @@
 .div_content {
-        color: #540316;
+        color: rgb(122,2,27);
         font-style: italic;
 
-        text-align: center;
-        padding-bottom: 25px;
+        text-align: left;
  
         ._phone {
                 margin-top: 25px;
@@ -18,6 +17,7 @@
         }
  
         ._where {
+                margin-top: 25px;
                 margin-bottom: 25px;
                 h1 {
                         font-size: 25px;
@@ -29,7 +29,7 @@
                 }
                 a {
                     text-decoration: underline;
-                    color: #540316;
+                    color: rgb(122,2,27);
                 }
         }
         ._map {
@@ -49,7 +49,7 @@
                         padding: 5px 20px;
                         margin-bottom: 20px;
                         cursor: pointer;
-                        color: #540316;
+                        color: rgb(122,2,27);
                         font-size: 17px;
                         font-style: italic;
                         border-radius: 10px;
@@ -72,6 +72,10 @@
     margin-bottom: -1px;
     background-color: #fff;
     border: 1px solid #ddd;
+    text-align: left;
+    &:hover {
+        cursor: pointer;
+    }
 }
 
 .list-group-item:first-child {
@@ -91,3 +95,68 @@
 h2 {
     font-size: 25px;
 }
+
+.city {
+    background: #f2dede;
+    font-size: 18px;
+    text-align: center;
+
+    &:hover {
+        cursor: default;
+    }
+}
+
+
+/*Навигация*/
+
+.navigation {
+    position: fixed;
+
+    left: 80%;
+
+    a {
+        text-decoration: none;
+
+        color: #7a021b;
+
+        border-radius: 0;
+        position: relative; 
+        display: block;
+        padding: 10px 15px;
+        margin-bottom: -1px;
+        background-color: #fff;
+        border: 1px solid #ddd;
+        text-align: left;
+
+        &:first-child {
+            border-top-left-radius: 4px;
+            border-top-right-radius: 4px;
+        }
+
+        &:last-child {
+          margin-bottom: 0;
+          border-bottom-right-radius: 4px;
+          border-bottom-left-radius: 4px;            
+        }
+
+        li {
+            list-style: none;
+        }
+    }
+    .selected {
+    background: #f2dede;
+}
+}
+
+#YMapsID {
+    position: fixed;
+    left: 41%;
+    margin-top: 92px;
+}
+
+.map_selected {
+    background: #dff0d8;
+}
+
+
+/**/
